Adjustments to Launch4J